--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,10 +1,13 @@
 <h1>Articles#index</h1>
 
+Our blog has <%= Article.public_count %> articles and counting!
 <ul>
 	<% @articles.each do |article| %>
+		<% unless article.archived? %>
 		<li>
 			<%= link_to article.title, article %>
 		</li>
+		<% end %>
 	<% end %>
 </ul>
 
