Add active_support sandbox

--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -11,4 +11,6 @@ Our blog has <%= Article.public_count %> articles and counting!
 	<% end %>
 </ul>
 
+<p><%= @helper %></p>
+
 <%= link_to 'New Article', new_article_path %>
